<resources>
    <string name="app_name">Kulyk_Lab</string>

    <!-- MainActivity -->
    <string name="get_data">GET DATA</string>
    <string name="empty_response_body">Empty response body</string>
    <string name="web_image">Web Image</string>
    <string name="no_data">Sorry. No Data</string>
    <string name="title">Title</string>
    <string name="long_title">Long Title</string>
    <string name="author">Author</string>
    <string name="TAG">MainActivity</string>
    <string name="seated_cupid">Seated Cupid</string>
    <string name="image">Image</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="more_info">More info</string>
    <string name="favourites">Favourites</string>
    <string name="image_button_for_favorities">Image button for favorities</string>
    <string name="full_screen_image">Full screen image</string>
</resources>
