<?xml version="1.0" encoding="utf-8"?>
<card_view:android.support.v7.widget.CardView android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/web_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/web_image" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/short_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/long_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Long title"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <TextView
            android:hint="@string/long_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <TextView
            android:hint="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

    </LinearLayout>

</card_view:android.support.v7.widget.CardView>