<?xml version="1.0" encoding="utf-8"?>
<card_view:android.support.v7.widget.CardView android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/web_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/web_image" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/short_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/more_info"
                android:id="@+id/more_info_button"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_to_favourites"
                android:id="@+id/card_fav_button"/>

        </LinearLayout>

    </LinearLayout>

</card_view:android.support.v7.widget.CardView>